Dumping Gox altogether

--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,7 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "thed1360/array-helper": "dev-master",
-        "thed1360/mtgox-api-v1-php-class": "dev-master"
+        "thed1360/array-helper": "dev-master"
     },
     "autoload": {
         "psr-0": {
