Added CampBX, added TickerResponse object, and consolidated ticker tests

--- a/composer.json
+++ b/composer.json
@@ -12,14 +12,22 @@
         "thed1360/array-helper": "dev-master",
         "coinbase/coinbase" : "dev-master",
         "payward/kraken-api-client": "dev-master",
-        "undelete/btce-api": "dev-master"
+        "undelete/btce-api": "dev-master",
+        "willmoss/bitstamp-php-api" : "dev-master",
+        "thed1360/camp-bx-php": "dev-master"
+
     },
     "repositories": [
         {
-            "type": "git",
-            "url":  "git@github.com:willmoss/bitstamp-php-api.git"
+            "type": "vcs",
+            "url":  "git@github.com:theD1360/bitstamp-php-api.git"
+        },
+        {
+            "type": "vcs",
+            "url":  "git@github.com:theD1360/CampBX-PHP.git"
         }
     ],
+    "require-all" : true,
     "autoload": {
         "psr-0": {
             "BitcoinExchange": "src"
